--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           <dl class="row">
             <dt class="col-sm-3">Usage</dt>
             <dd class="col-sm-9">
-              <p>To export conversation histroy of any channel there use<pre>/export-conversation</pre></p>
+              <p>To export conversation histroy of any channel there type:<pre>/export-conversation</pre></p>
             </dd>
           </dl>
         </div>
